--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 .vscode/
 
 src/main/resources/application.properties
+src/main/resources/META-INF/additional-spring-configuration-metadata.json
